[Fix] Navigation, unicode ranges, and fonts
 - Fixed a bug with getting the "previous" emoji, by pressing the up
 button. It now correctly cycles back to the bottom of the list.

 - Fixed the unicode ranges for the emojis being displayed. This new
 range was not tested throughly, but was a recommendation borrowed from
 online. This should be tested in the future (added a TODO to indicate
 this)

 - We don't need to create dynamic font faces, since we could simply
 use the font "fallback" system, where we would place the "emoji" font,
 which only covers the unicode ranges for the emojis we want, before all
 of the other fonts used in the text input. This is demonstrated in the
 "test-textbox" style.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,24 +1,19 @@
 @font-face {
   font-family: pickmoji-emoji;
-  src: local('Arial')
-}
-
-@font-face {
-  font-family: pickmoji-emoji;
   src: local('Noto Color Emoji');
 
   /* Emoji unicode blocks */
-  unicode-range: U+1F300-1F5FF, U+1F600-1F64F, U+1F680-1F6FF, U+2600-26FF;
+  unicode-range: U+0080-02AF, U+0300-03FF, U+0600-06FF, U+0C00-0C7F, U+1DC0-1DFF, U+1E00-1EFF, U+2000-209F, U+20D0-214F, U+2190-23FF, U+2460-25FF, U+2600-27EF, U+2900-29FF, U+2B00-2BFF, U+2C60-2C7F, U+2E00-2E7F, U+3000-303F, U+A490-A4CF, U+E000-F8FF, U+FE00-FE0F, U+FE30-FE4F, U+1F000-1F02F, U+1F0A0-1F0FF, U+1F100-1F64F, U+1F680-1F6FF, U+1F910-1F96B, U+1F980-1F9E0;
 }
 
 .test-textbox {
-  font-family: pickmoji-emoji;
+  font-family: pickmoji-emoji, Arial;
 }
 
 // https://coolors.co/114b5f-1a936f-88d498-c6dabf-f3e9d2
 .pickmoji-picker-active {
   font-size: 12px;
-  font-family: pickmoji-emoji;
+  font-family: pickmoji-emoji, Arial;
   position: absolute;
   display: inline-block;
   height: auto;
